Introduce command mode for setting tempo

--- a/app/views/songs/show.html.haml
+++ b/app/views/songs/show.html.haml
@@ -1,7 +1,7 @@
 %section#song
 :javascript
   Midi.connect();
-  window.VIEW_STATE = {cursor: {beats: 0, pitch: 0}};
+  window.VIEW_STATE = {mode: 'normal', cursor: {beats: 0, pitch: 0}};
   window.SONG_STATE = #{song_json.to_json};
   view = React.createElement(Part, null);
   window.PART_VIEW = React.render(view, window.song);
