--- a/app/views/ui/new_song.html.haml
+++ b/app/views/ui/new_song.html.haml
@@ -10,13 +10,15 @@
         - 16.times.each do
           %beat
       %cursorGrid
-        %cursor{style: "top: #{11 * 60}px; left: 60px;"}
+        %cursor{style: "top: #{17 * 60}px; left: 60px;"}
       %part
-        %note{style: "top: #{11 * (127 - 60)}px; left: 160px; width: 98px"}
-        %note{style: "top: #{11 * (127 - 57)}px; left: 160px; width: 200px"}
-        %note{style: "top: #{11 * (127 - 53)}px; left: 160px; width: 98px"}
+        %note{style: "top: #{17 * (127 - 60)}px; left: 160px; width: 98px"}
+        %note{style: "top: #{17 * (127 - 57)}px; left: 160px; width: 200px"}
+        %note{style: "top: #{17 * (127 - 53)}px; left: 160px; width: 98px"}
+        %note{style: "top: #{17 * (127 - 49)}px; left: 160px; width: 40px"}
   %statusLine
     %name seq27
     %filler
     %cursorPosition 11:45 c6
   %commandLine
+    \:Explore
