--- a/app/assets/stylesheets/all.sass
+++ b/app/assets/stylesheets/all.sass
@@ -7,14 +7,15 @@ song
   display: flex
   flex-direction: column
   background-color: white
+  align-content: stretch
 
-  noteGrid
-    height: calc(100vh - 40px)
+  grids
     display: flex
     position: relative
     flex-direction: column
     overflow: scroll
     z-index: 100
+    flex-shrink: 10
 
     pitchGrid
       z-index: 100
@@ -135,13 +136,15 @@ song
       position: fixed
       top: 0
       left: 0
-      height: calc(100% - 40px)
       padding-left: 60px
+      height: 100%
+      width: calc(100% - 60px)
       display: flex
       z-index: 10
 
       beat
         width: 100px
+        min-width: 10px
         border-right: 1px dashed black
 
     cursorGrid
@@ -182,20 +185,36 @@ song
     height: 20px
     width: 100%
     display: flex
-    background-color: lighten(rgba(0, 0, 194, 0.6), 40%)
+    background-color: lighten(rgb(0, 0, 194), 40%)
     vertical-align: bottom
+    flex-grow: 0
+    z-index: 100
+
     name
       width: 60px
       text-align: center
-      background-color: lighten(rgba(200, 200, 200, 0.4), 40%)
+      background-color: lighten(rgb(0, 0, 194), 50%)
     filler
       flex-grow: 20
     cursorPosition
       flex: 10
       text-align: center
       min-width: 40px
+
   commandLine
-    height: 20px
+    min-height: 20px
     width: 100%
     display: block
     vertical-align: bottom
+    z-index: 100
+    background-color: white
+    flex-grow: 0
+
+    span.lefttab
+      padding-left: 20px
+
+    span.error
+      background-color: red
+      color: white
+      padding-left: 10px
+      padding-right: 10px
