--- a/app/views/layouts/ui_application.html.haml
+++ b/app/views/layouts/ui_application.html.haml
@@ -1,9 +1,14 @@
 !!!
 %html(lang="en-us" itemscope="")
-%head
-  %title Seq27 UI
-  %meta{name: 'viewport', content: 'width=device-width, initial-scale=1, maximum-scale=1'}
-  = stylesheet_link_tag "all"
+  %head
+    %title Seq27 UI
+    %meta{name: 'viewport', content: 'width=device-width, initial-scale=1, maximum-scale=1'}
+    = stylesheet_link_tag "all", 'stagehand'
+    = javascript_include_tag 'ui_application', 'stagehand'
+    :javascript
+      $(function() {
+        $(document.body).stagehand({ overlay: true });
+      });
 
 %body
   .wrapper
