--- a/app/views/ui/new_song.html.haml
+++ b/app/views/ui/new_song.html.haml
@@ -1,24 +1,36 @@
 %song
   %grids
-    %noteGrid
-      %pitchGrid
-        - (0..127).to_a.reverse.each do |pitch|
-          %pitch{class: [sharpForNumber(pitch), cPitch(pitch), octave(pitch)].join(' ')}
-            %pianoKey{class: [sharpForNumber(pitch), cPitch(pitch), octave(pitch)].join(' ')}
-              = cOctave(pitch)
-      %beatGrid
-        - 16.times.each do
-          %beat
-      %cursorGrid
-        %cursor{style: "top: #{17 * 60}px; left: 60px;"}
-      %part
-        %note{style: "top: #{17 * (127 - 60)}px; left: 160px; width: 98px"}
-        %note{style: "top: #{17 * (127 - 57)}px; left: 160px; width: 200px"}
-        %note{style: "top: #{17 * (127 - 53)}px; left: 160px; width: 98px"}
-        %note{style: "top: #{17 * (127 - 49)}px; left: 160px; width: 40px"}
+    %pitchGrid
+      - (0..127).to_a.reverse.each do |pitch|
+        %pitch{class: [sharpForNumber(pitch), cPitch(pitch), octave(pitch)].join(' ')}
+          %pianoKey{class: [sharpForNumber(pitch), cPitch(pitch), octave(pitch)].join(' ')}
+            = cOctave(pitch)
+    %beatGrid
+      - 16.times.each do
+        %beat
+    %cursorGrid
+      %cursor{style: "top: #{17 * 60}px; left: 60px;"}
+    %part
+      %note{style: "top: #{17 * (127 - 60)}px; left: 160px; width: 98px"}
+      %note{style: "top: #{17 * (127 - 57)}px; left: 160px; width: 200px"}
+      %note{style: "top: #{17 * (127 - 53)}px; left: 160px; width: 98px"}
+      %note{style: "top: #{17 * (127 - 49)}px; left: 160px; width: 40px"}
   %statusLine
     %name seq27
     %filler
     %cursorPosition 11:45 c6
-  %commandLine
+  %commandLine{data: {stage: 'commandLine', scene: 'command'}}
     \:Explore
+  %commandLine{data: {stage: 'commandLine', scene: 'list'}}
+    \:outputs
+    %p
+      %span.lefttab 0
+      %span.lefttab AudioBoxUSB
+    %p
+      %span.lefttab 1
+      %span.lefttab Saphirre40
+    %p.action
+      %span.lefttab Press ENTER to continue
+  %commandLine{data: {stage: 'commandLine', scene: 'error'}}
+    %span.error
+      E492: Not an editor command: something
