Status line cursor position

--- a/app/assets/stylesheets/all.sass
+++ b/app/assets/stylesheets/all.sass
@@ -201,6 +201,10 @@ song
       text-align: center
       min-width: 40px
 
+      span.label
+        font-weight: bold
+      span.value
+
   commandLine
     min-height: 20px
     width: 100%
