--- a/app/assets/stylesheets/all.sass
+++ b/app/assets/stylesheets/all.sass
@@ -9,6 +9,23 @@ song
   background-color: white
   align-content: stretch
 
+  explorer
+    display: flex
+    position: relative
+    flex-direction: column
+    overflow: scroll
+    z-index: 100
+    flex-shrink: 10
+    height: 100vh
+    padding: 100px
+
+    songSection
+      display: block
+
+      part
+        display: block
+        padding-left: 20px
+
   grids
     display: flex
     position: relative
