--- a/app/assets/stylesheets/all.sass
+++ b/app/assets/stylesheets/all.sass
@@ -13,7 +13,6 @@ song
     display: flex
     position: relative
     flex-direction: column
-    overflow: scroll
     z-index: 100
     flex-shrink: 10
     height: 100vh
@@ -54,6 +53,7 @@ song
         min-height: 16px
         width: 100%
         border-top: 1px solid transparentize(rgb(250,250,250), 0.5)
+        box-sizing: border-box
         display: block
 
         &.sharp
@@ -70,6 +70,7 @@ song
           display: block
           border-right: 1px solid black
           box-shadow: 1px 0px 1px 1px rgba(0, 0, 0, 0.2)
+          box-sizing: border-box
 
           &.sharp
             background-color: black
@@ -171,8 +172,9 @@ song
 
       beat
         width: 100px
-        min-width: 10px
+        min-width: 75px
         border-right: 1px dashed black
+        box-sizing: border-box
 
     cursorGrid
       position: absolute
@@ -191,9 +193,11 @@ song
         height: 15px
         width:  98px
         border: 1px solid green
+        box-sizing: border-box
 
       anchorCursor
         border: 1px solid red
+        box-sizing: border-box
         background-color: rgba(255,140,140, 0.9)
 
       visualSelection
@@ -202,6 +206,7 @@ song
         border-radius: 3px
         background-color: rgba(200,255,200, 0.5)
         border: 1px solid green
+        box-sizing: border-box
 
     part
       position: absolute
@@ -218,6 +223,7 @@ song
         background: linear-gradient(90deg, blue, transparent)
         height: 15px
         border: 1px solid blue
+        box-sizing: border-box
 
   statusLine
     height: 20px
