--- a/app/views/ui/new_song.html.haml
+++ b/app/views/ui/new_song.html.haml
@@ -5,20 +5,23 @@
         %pitch{class: [sharpForNumber(pitch), cPitch(pitch), octave(pitch)].join(' ')}
           %pianoKey{class: [sharpForNumber(pitch), cPitch(pitch), octave(pitch)].join(' ')}
             = cOctave(pitch)
-    %beatGrid
+    %beatGrid{data: {stage: 'beats', scene: 'sixteen'}}
       - 16.times.each do
         %beat
+    %beatGrid{data: {stage: 'beats', scene: 'overflow'}}
+      - 32.times.each do
+        %beat
     %cursorGrid{data: {stage: 'selection', scene: 'none'}}
-      %cursor{style: "top: #{17 * 60}px; left: 60px;"}
+      %cursor{style: "top: #{16 * 60}px; left: 60px;"}
     %cursorGrid{data: {stage: 'selection', scene: 'selected'}}
-      %cursor{style: "top: #{17 * 60}px; left: 260px;"}
-      %anchorCursor{style: "top: #{17 * 79}px; left: 560px;"}
-      %visualSelection{style: "top: #{17 * 60}px; left: 260px; height: #{17 * 20}px; width: 400px"}
+      %cursor{style: "top: #{16 * 60}px; left: 260px;"}
+      %anchorCursor{style: "top: #{16 * 79}px; left: 560px;"}
+      %visualSelection{style: "top: #{16 * 60}px; left: 260px; height: #{16 * 20}px; width: 400px"}
     %part
-      %note{style: "top: #{17 * (127 - 60)}px; left: 160px; width: 98px"}
-      %note{style: "top: #{17 * (127 - 57)}px; left: 160px; width: 200px"}
-      %note{style: "top: #{17 * (127 - 53)}px; left: 160px; width: 98px"}
-      %note{style: "top: #{17 * (127 - 49)}px; left: 160px; width: 40px"}
+      %note{style: "top: #{16 * (127 - 60)}px; left: 160px; width: 98px"}
+      %note{style: "top: #{16 * (127 - 57)}px; left: 160px; width: 200px"}
+      %note{style: "top: #{16 * (127 - 53)}px; left: 160px; width: 98px"}
+      %note{style: "top: #{16 * (127 - 49)}px; left: 160px; width: 40px"}
   %statusLine
     %name seq27
     %filler
