--- a/app/views/ui/new_song.html.haml
+++ b/app/views/ui/new_song.html.haml
@@ -32,6 +32,9 @@
       %span.value 11/16
       %span.label ticks:
       %span.value 45
+  %commandLine{data: {stage: 'commandLine', scene: 'partialSequence'}}
+    %partialSequence
+      g
   %commandLine{data: {stage: 'commandLine', scene: 'command'}}
     \:Explore
   %commandLine{data: {stage: 'commandLine', scene: 'list'}}
