Highlight notes in selected group

--- a/app/assets/stylesheets/all.sass
+++ b/app/assets/stylesheets/all.sass
@@ -225,6 +225,12 @@ song
         border: 1px solid blue
         box-sizing: border-box
 
+        &.groupSelected
+          border: 2px solid red
+
+        &.visualSelected
+          border: 3px solid lighten(green, 10%)
+
   statusLine
     height: 20px
     width: 100%
