--- a/app/views/ui/new_song.html.haml
+++ b/app/views/ui/new_song.html.haml
@@ -21,7 +21,10 @@
       %note{style: "top: #{16 * (127 - 60)}px; left: 160px; width: 98px"}
       %note{style: "top: #{16 * (127 - 57)}px; left: 160px; width: 200px"}
       %note{style: "top: #{16 * (127 - 53)}px; left: 160px; width: 98px"}
-      %note{style: "top: #{16 * (127 - 49)}px; left: 160px; width: 40px"}
+    %part{data: {stage: 'notes', scene: 'selectedGroup'}}
+      %note.groupSelected{style: "top: #{16 * (127 - 49)}px; left: 160px; width: 40px"}
+    %part{data: {stage: 'notes', scene: 'selectedVisual'}}
+      %note.visualSelected{style: "top: #{16 * (127 - 49)}px; left: 160px; width: 40px"}
   %statusLine
     %name seq27
     %filler
