--- a/app/views/songs/new.html.haml
+++ b/app/views/songs/new.html.haml
@@ -4,4 +4,4 @@
   ViewState.init()
   window.SONG_STATE = Song.newSong()
   var view = React.createElement(SeqCom.Song, null)
-  window.SONG_VIEW = React.render(view, window.song)
+  window.SONG_VIEW = ReactDOM.render(view, window.song)
