--- a/app/views/layouts/sequencer.html.erb
+++ b/app/views/layouts/sequencer.html.erb
@@ -3,8 +3,8 @@
 <head>
   <title>Seq27</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
-  <%= stylesheet_link_tag 'home' %>
+  <%= javascript_include_tag 'sequencer' %>
+  <%= javascript_include_tag 'event_triggers'  if Rails.env.test? %>
   <%= csrf_meta_tags %>
 </head>
 <body>
