Get the angles right in the title

--- a/app/assets/stylesheets/title.css.scss
+++ b/app/assets/stylesheets/title.css.scss
@@ -53,7 +53,7 @@ $col11: rgba(200, 0, 0, 0.8);
   @include position(3, 2);
   @include radius(0, 0, 0, 0);
   z-index: 10;
-  -webkit-transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
+  transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
   background-color: $col11;
 }
 
@@ -62,7 +62,7 @@ $col11: rgba(200, 0, 0, 0.8);
   @include position(3, 2);
   @include radius(0, 0, 0, 0);
   z-index: 11;
-  -webkit-transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
+  transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
   background-color: $col11;
 }
 
@@ -71,7 +71,7 @@ $col11: rgba(200, 0, 0, 0.8);
   @include position(9, 2);
   @include radius(0, 0, 0, 0);
   z-index: 12;
-  -webkit-transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
+  transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
   background-color: $col11;
 }
 
@@ -80,7 +80,7 @@ $col11: rgba(200, 0, 0, 0.8);
   @include position(9, 11);
   @include radius(0, 0, 0, 0);
   z-index: 13;
-  -webkit-transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
+  transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
   background-color: $col11;
 }
 
@@ -89,7 +89,7 @@ $col11: rgba(200, 0, 0, 0.8);
   @include position(15, 2);
   @include radius(0, 0, 0, 0);
   z-index: 14;
-  -webkit-transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
+  transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
   background-color: $col11;
 }
 #letter1 {
@@ -103,7 +103,7 @@ $col11: rgba(200, 0, 0, 0.8);
   @include position(3, 3);
   @include radius(0, 0, 0, 0);
   z-index: 10;
-  -webkit-transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
+  transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
   background-color: $col11;
 }
 
@@ -112,7 +112,7 @@ $col11: rgba(200, 0, 0, 0.8);
   @include position(3, 3);
   @include radius(0, 0, 0, 0);
   z-index: 11;
-  -webkit-transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
+  transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
   background-color: $col11;
 }
 
@@ -121,7 +121,7 @@ $col11: rgba(200, 0, 0, 0.8);
   @include position(9, 3);
   @include radius(0, 0, 0, 0);
   z-index: 12;
-  -webkit-transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
+  transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
   background-color: $col11;
 }
 
@@ -130,7 +130,7 @@ $col11: rgba(200, 0, 0, 0.8);
   @include position(15, 3);
   @include radius(0, 0, 0, 0);
   z-index: 13;
-  -webkit-transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
+  transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
   background-color: $col11;
 }
 #letter2 {
@@ -144,7 +144,7 @@ $col11: rgba(200, 0, 0, 0.8);
   @include position(2, 3);
   @include radius(0, 0, 0, 0);
   z-index: 10;
-  -webkit-transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
+  transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
   background-color: transparent;
   border-style: solid;
   @include border-colors($col11, $col11, $col11, $col11);
@@ -153,10 +153,10 @@ $col11: rgba(200, 0, 0, 0.8);
 
 #shape11{
   @include size(7, 2);
-  @include position(15, 10);
+  @include position(13, 13);
   @include radius(0, 0, 0, 0);
   z-index: 11;
-  -webkit-transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(45deg);
+  transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(-45deg);
   background-color: $col11;
 }
 #letter3 {
@@ -170,7 +170,7 @@ $col11: rgba(200, 0, 0, 0.8);
   @include position(3, 3);
   @include radius(0, 0, 0, 0);
   z-index: 10;
-  -webkit-transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
+  transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
   background-color: $col11;
 }
 
@@ -179,7 +179,7 @@ $col11: rgba(200, 0, 0, 0.8);
   @include position(3, 11);
   @include radius(0, 0, 0, 0);
   z-index: 11;
-  -webkit-transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
+  transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
   background-color: $col11;
 }
 
@@ -188,7 +188,7 @@ $col11: rgba(200, 0, 0, 0.8);
   @include position(9, 3);
   @include radius(0, 0, 0, 0);
   z-index: 12;
-  -webkit-transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
+  transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
   background-color: $col11;
 }
 
@@ -197,7 +197,7 @@ $col11: rgba(200, 0, 0, 0.8);
   @include position(9, 3);
   @include radius(0, 0, 0, 0);
   z-index: 13;
-  -webkit-transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
+  transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
   background-color: $col11;
 }
 
@@ -206,7 +206,7 @@ $col11: rgba(200, 0, 0, 0.8);
   @include position(15, 3);
   @include radius(0, 0, 0, 0);
   z-index: 14;
-  -webkit-transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
+  transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
   background-color: $col11;
 }
 #letter4 {
@@ -220,16 +220,16 @@ $col11: rgba(200, 0, 0, 0.8);
   @include position(3, 2);
   @include radius(0, 0, 0, 0);
   z-index: 10;
-  -webkit-transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
+  transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
   background-color: $col11;
 }
 
 #shape18{
   @include size(2, 9);
-  @include position(3, 8);
-  @include radius(0, 0, 0, 1);
+  @include position(6, 4);
+  @include radius(2, 0, 0, 0);
   z-index: 11;
-  -webkit-transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(45deg);
+  transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(5px, 0px) rotate(-45deg);
   background-color: $col11;
 }
 
@@ -238,6 +238,6 @@ $col11: rgba(200, 0, 0, 0.8);
   @include position(9, 5);
   @include radius(2, 0, 0, 0);
   z-index: 12;
-  -webkit-transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(0px, 0px) rotate(0deg);
+  transform: scale(1, 1) skew(0.0rad, 0.0rad) translate(5px, 0px) rotate(0deg);
   background-color: $col11;
 }
