--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -7,3 +7,12 @@
 body > div{
   margin-left: 60px;
 }
+
+code {
+  background-color: yellow;
+}
+
+em {
+  font-style: normal;
+  background-color: lightpink;
+}
