Place text input at the command line

--- a/app/assets/stylesheets/all.sass
+++ b/app/assets/stylesheets/all.sass
@@ -265,6 +265,10 @@ song
     background-color: white
     flex-grow: 0
 
+    input
+      border: 0px
+      font-family: monospace
+
     partialSequence
       margin-left: 80%
       padding-right: 20px
