--- a/app/views/home/show.html.haml
+++ b/app/views/home/show.html.haml
@@ -56,7 +56,7 @@
       %ul
         - saved_songs.each do |song|
           %li.song
-            = link_to "Song #{song.id}", song_path(song), id: "song#{song.id}"
+            = link_to song.name, song_path(song), id: "song#{song.id}"
 
 .description
   = render 'description'
