--- a/app/views/songs/show.html.haml
+++ b/app/views/songs/show.html.haml
@@ -2,6 +2,6 @@
 :javascript
   Midi.connect();
   window.SONG_STATE = #{song_json.to_json};
-  ViewState.init(SONG_STATE)
-  var view = React.createElement(SeqCom.Song, null)
-  window.SONG_VIEW = ReactDOM.render(view, window.song)
+  window.VIEW_STATE = ViewState.init(SONG_STATE);
+  var view = React.createElement(SeqCom.Song, null);
+  window.SONG_VIEW = ReactDOM.render(view, window.song);
