--- a/app/views/songs/show.html.haml
+++ b/app/views/songs/show.html.haml
@@ -3,5 +3,5 @@
   Midi.connect();
   window.SONG_STATE = #{song_json.to_json};
   window.VIEW_STATE = ViewState.init(SONG_STATE);
-  var view = React.createElement(SeqCom.Song, null);
+  var view = React.createElement(SeqCom.Song, {song: SONG_STATE, view: VIEW_STATE});
   window.SONG_VIEW = ReactDOM.render(view, window.song);
