Move from rails pipeline to webpack

--- a/app/views/layouts/sequencer.html.erb
+++ b/app/views/layouts/sequencer.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Seq27</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'sequencer' %>
+  <script type='text/javascript' src='/assets/app.js'/>
   <%= javascript_include_tag 'event_triggers'  if Rails.env.test? %>
   <%= csrf_meta_tags %>
 </head>
