Init song unless song defined elsewhere

--- a/app/views/songs/current.html.haml
+++ b/app/views/songs/current.html.haml
@@ -1,7 +1,3 @@
 %section#song
 :javascript
-  Midi.connect();
-  window.SONG_STATE = JSON.parse(localStorage.getItem('currentSong'))
-  ViewState.init(SONG_STATE)
-  var view = React.createElement(SeqCom.Song, null)
-  window.SONG_VIEW = ReactDOM.render(view, window.song)
+  window.DEFINED_SONG_STATE = JSON.parse(localStorage.getItem('currentSong'));
